--- a/css/style.v1.9.css
+++ b/css/style.v1.9.css
@@ -257,11 +257,11 @@
 
 .loading_in {
     position: absolute;
-    width: 280px;
-    top: 50%;
-    left: 50%;
-    margin-left: -140px;
-    margin-top: -105px;
+    width: 100%;
+    top: 0;
+    left: 0;
+    /*margin-left: -140px;*/
+    /*margin-top: -105px;*/
 }
 
 .loading_wrap {
@@ -270,7 +270,8 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #1B1D1C;
+    /*background-color: #1B1D1C;*/
+    background-color: #fff;
     z-index: 9;
     /*display: none;*/
 }
